compiler/testData/diagnostics/tests/sealed/NeverFinal.kt
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL
<!INCOMPATIBLE_MODIFIERS!>final<!> <!INCOMPATIBLE_MODIFIERS!>sealed<!> class Base {

}